setup/ubuntu-service.yml
apiVersion: v1
kind: Service
metadata:
  name: ubuntu-service
  namespace: argocd
spec:
  selector:
    app: ubuntu
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
