setup/ingress-ubuntu.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ubuntu
  namespace: argocd
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules: 
    - http:
        paths:
          - path: /test(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: ubuntu-service
                port:
                  number: 8000
